# SimpleManus

./: .gitignore  README.md  pyproject.toml  traveling plan result.txt
ReAct/: browser_use_and_search.ipynb  multi_agent.ipynb  multi_agent_ver.py  planner.ipynb  react_ver.py
ReWOO/: README.md  rewoo_broweruse.py  rewoo_example_1.py  tavily_example_1.ipynb  tavily_example_1.py
agent/: LlmCompiler.ipynb  browser_use_and_search.ipynb  langchain_app.py  multi_agent.ipynb  multi_agent_ver.py  react_ver.py  util.py  utils.py
agent/tools/: browser_use_tool.py  markdown_tool.py  planning_tool.py
experiments/: collect_experiment_result.py  run_experiment.py
plan-and-execute/: .env.example  .gitignore  README.md  __init__.py  agent_engine.py  agent_graph.py  agent_tools.py  config.py  information_extractor.py  planner_engine.py  prompt_templates.py  requirements.txt  run_app.py  run_travel_app.py  search_engine.py  travel_graph.py  travel_tools.py
plan-and-execute/tools/: browser_use_tool.py
plan-and-execute/utils/: mlflow_callback.py
tools/: browser_use_tool.py  planning_tool.py
utils/: mlflow_callback.py
