[project]
name = "simplemanus"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "openai (>=1.66.3,<2.0.0)",
    "browser-use (>=0.1.40,<0.2.0)",
    "langchain (>=0.3.20,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
