[project]
name = "simplemanus"
version = "0.1.0"
description = "A framework for building and testing multi-agent architectures with browser automation capabilities"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "openai>=1.66.3,<2.0.0",
    "browser-use>=0.1.40,<0.2.0",
    "langchain>=0.3.20,<0.4.0",
    "langchain-community>=0.3.19,<0.4.0",
    "langchain-core>=0.3.20,<0.4.0",
    "googlesearch-python>=1.3.0,<2.0.0",
    "langsmith>=0.3.18,<0.4.0",
    "langgraph>=0.3.17,<0.4.0",
    "numexpr>=2.10.2,<3.0.0",
    "duckduckgo-search>=7.5.2,<8.0.0",
    "pytest-playwright>=0.7.0,<0.8.0",
    "markdown>=3.7,<4.0",
    "pdfkit>=1.0.0,<2.0.0",
    "pypandoc>=1.15,<2.0",
    "mlflow>=2.21.3,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "typing-extensions>=4.9.0,<5.0.0",
    "playwright>=1.42.0,<2.0.0",
    "markdownify>=0.11.6,<0.15.0",
    "ipython>=8.22.0,<9.0.0",
    "jupyter>=1.0.0,<2.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
